# linkages

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.h
shapeop/: CMakeLists.txt
shapeop/libShapeOp/: CMakeLists.txt
shapeop/libShapeOp/src/: LSSolver.h
